@@ -869,10 +869,10 @@ trunc.POSIXt <- function(x, units=c("secs", "mins", "hours", "days"), ...)
     if(length(x$sec))
 	switch(units,
 	       "secs" = {x$sec <- trunc(x$sec)},
-	       "mins" = {x$sec <- 0},
-	       "hours"= {x$sec <- 0; x$min <- 0L},
+	       "mins" = {x$sec[] <- 0},
+	       "hours"= {x$sec[] <- 0; x$min[] <- 0L},
                ## start of day need not be on the same DST.
-	       "days" = {x$sec <- 0; x$min <- 0L; x$hour <- 0L; x$isdst <- -1L}
+	       "days" = {x$sec[] <- 0; x$min[] <- 0L; x$hour[] <- 0L; x$isdst[] <- -1L}
 	       )
     x
 }
