@@ -2595,3 +2595,10 @@ cbind(x, "1"=filter(x, 0.5, method="recursive"),
          "2"=filter(x, c(0.5, 0.0), method="recursive"),
          "3"=filter(x, c(0.5, 0.0, 0.0), method="recursive"))
 ## NAs in wrong place in R <= 2.13.1.
+
+
+## PR#14679
+x <- as.POSIXlt(c("2010-02-27 22:30:33", "2009-08-09 06:01:03",
+                  "2010-07-23 17:29:59"))
+trunc(x, units = "days")[1:3]
+## gave NAs after the first in R < 2.13.2
