@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2011-09-22 r57041)
+R Under development (unstable) (2011-09-23 r57052)
 Copyright (C) 2011 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 Platform: x86_64-apple-darwin9.8.0/x86_64 (64-bit)
@@ -6369,15 +6369,15 @@ function ()
 > print.function
 function (x, ...)  
  - attr(*, "srcref")=Class 'srcref'  atomic [1:8] 1 19 1 63 19 63 1 1
-  .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x1037f5120> 
+  .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x1042c22a8> 
 > f
 function ()  
  - attr(*, "srcref")=Class 'srcref'  atomic [1:8] 1 17 1 28 17 28 1 1
-  .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x10393a958> 
+  .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x1042b3158> 
  - attr(*, "note")= chr "just a note"
  - attr(*, "yada")=function ()  
   ..- attr(*, "srcref")=Class 'srcref'  atomic [1:8] 2 24 2 48 24 48 2 2
-  .. .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x10393a958> 
+  .. .. ..- attr(*, "srcfile")=Classes 'srcfilecopy', 'srcfile' <environment: 0x1042b3158> 
 > rm(print.function)
 > ## auto-printing and printing differed up to R 2.9.x
 > 
@@ -6806,4 +6806,12 @@ Frequency = 1
 8  8    NA    NA    NA
 9  9    NA    NA    NA
 > ## NAs in wrong place in R <= 2.13.1.
+> 
+> 
+> ## PR#14679
+> x <- as.POSIXlt(c("2010-02-27 22:30:33", "2009-08-09 06:01:03",
++                   "2010-07-23 17:29:59"))
+> trunc(x, units = "days")[1:3]
+[1] "2010-02-27" "2009-08-09" "2010-07-23"
+> ## gave NAs after the first in R < 2.13.2
 > 
