@@ -110,7 +110,7 @@
 
 }
 
-\section{CHANGES IN R VERSION 2.13.1 patched}{
+\section{CHANGES IN R VERSION 2.13.2}{
   \subsection{BUG FIXES}{
     \itemize{
       \item The fix for \PR{14583} caused inconsistent behaviour in other
